# mesa-for-android-container

./: .gitignore  Makefile.in  aclocal.m4  configure  i965-comet-lake.diff  lavapipe-Defer-lavapipe-warning-to-CreateDevice.patch  libdrm_2.4.105-3.dsc  libdrm_2.4.107-1.dsc  mesa.spec  meson.build  sources  wayland-display-hacks.patch
.github/: README.md
.github/workflows/: macos.yml
debian/: Makefile.widgets  README.Debian  changelog  control  control.in  copyright  libegl1-mesa-dev.links  libegl1-mesa.postinst  libegl1-mesa.prerm  libgl1-mesa-dev.links  libgl1-mesa-glx.postinst  libgl1-mesa-glx.prerm  libgles1-mesa-dev.links  libgles2-mesa-dev.links  libopenvg1-mesa-dev.links  mesa-vulkan-drivers.install  mesa-vulkan-drivers.lintian-overrides  not-installed  postinst.mesag3+ggi  postrm.mesag3  rules  shlibs.libc6  shlibs.libgl  shlibs.libglu  shlibs.libosmesa4  shlibs.local  shlibs.widgets.libc6
debian/patches/: 0005-Add-experimental-KGSL-support.patch  0006-Fix-build-errors.patch  0008-Add-experimental-KGSL-support.patch  0009-Fix-build-errors.patch  Revert-hasvk-elk-stop-turning-load_push_constants-in.patch  disable_ppc64el_assembly.diff  etnaviv-add-support-for-texelfetch.patch  fix-s390x-glxgears.diff  gfxstream-downgrade-log-severity.diff  i965-gen9-implement-push-constant-buffer-workaround.diff  kopper-Revert-kopper-Explicitly-choose-zink.patch  pan-genxml-Add-missing-parenthesis-on-pan_cast_and_p.patch  path_max.diff  series  src_glx_dri_common.h.diff
demos/: Makefile.am
docs/: release-calendar.csv
docs/relnotes/: 10.2.1.html
progs/xdemos/: Makefile~
si-glu/: Makefile.am
si-glu/libtess/: Makefile.am
si-glu/libutil/: Makefile.am
src/: Makefile.am  Makefile.in
src-glut/: Makefile.am
src/Allegro/: Makefile.am
src/BeOS/: Makefile.am
src/amd/: Makefile.in
src/broadcom/: Makefile.in
src/compiler/: Makefile.in
src/egl/: Makefile.in
src/gallium/: Makefile.in
src/gbm/: Makefile.in
src/glsl/: Makefile.in  glsl_lexer.cpp  (+2 more)
widgets-mesa/: configure.in
(+351 files in other folders)
